--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-VITE_API_BASE=http://192.168.31.218:5000
+VITE_API_BASE=http://localhost:5000
+
+//VITE_API_BASE=https://velaiez1-z6fi.onrender.com
+
+
+
+PORT=5000
+GMAIL_USER=dheve1615@gmail.com
+GMAIL_PASS=crzo epvd nxyp onmg
+
