--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "dotenv": "^16.5.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.21.2",
+    "mammoth": "^1.11.0",
     "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
     "path-to-regexp": "6.2.1",
+    "pdf-parse": "^1.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
