--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 VITE_API_BASE=http://localhost:5000
 
-#VITE_API_BASE=https://velaiez-demo-test.onrender.com
-
+VITE_API_BASE=https://velaiez-demo-test-1.onrender.com
 
 
 PORT=5000
